fix tab alignment

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -505,7 +505,7 @@ $tab-expand-max: 6;
 $tab-content-background: $white;
 $tab-content-border: $light-gray;
 $tab-content-color: foreground($tab-background, $primary-color);
-$tab-content-padding: 1rem;
+$tab-content-padding: $global-margin;
 
 // 32. Thumbnail
 // -------------
